# inbrief

./: .air.toml  README.md  buf.gen.yaml  go.mod  go.sum  justfile  main.go
clusterer/: .gitignore  clustering.py  main.py  pyproject.toml
clusterer/config/: settings.py
clusterer/frontend/: index.html  package-lock.json  package.json
clusterer/frontend/src/: App.css  App.tsx  Data.tsx  index.css  main.tsx  theme.css
clusterer/frontend/src/components/: StoryCard.tsx  ThemeToggle.tsx  Timeline.tsx
cmd/scraper/: main.go
config/: config.go
docs/: docs.go  openapi.json  swagger.json  swagger.yaml
docs/proto/: fetch.openapi.yaml
internal/: state.go
internal/server/: handlers.go  server.go
internal/streaming/: subscribe.go
internal/telegram/: client.go
internal/tl/: channel.go  client.go  fetch.go  streaming.go  util.go
pkg/log/: log.go
pkg/models/: scrape.go
pkg/proto/: fetch.pb.go  fetch.twirp.go
pkg/tl/: chat.go
proto/: fetch.proto
proto/fetcher/: fetch.proto
scraper/: .air.toml  .gitignore  buf.gen.yaml  go.sum
scraper/cmd/scraper/: main.go
scraper/config/: config.go
scraper/internal/: notify.go  state.go  writer.go
scraper/internal/server/: handlers.go  server.go
scraper/internal/tl/: fetch.go  streaming.go  util.go
scraper/pkg/channels/: fanout.go
scraper/proto/fetcher/: fetch.pb.go  fetch.proto
