[project]
name = "clusterer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "bertopic>=0.17.0",
    "einops>=0.8.1",
    "minio>=7.2.15",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "redis[hiredis]>=6.1.0",
    "plotly==5.24.1",
    "umap-learn>=0.5.7",
    "scikit-learn>=1.6.1",
    "aiohttp>=3.11.18",
    "uvicorn>=0.34.2",
    "fastapi[standard]>=0.115.12",
]

[dependency-groups]
dev = [
    "ty>=0.0.1a6",
]
